# runconf-ui

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
.github/: pull_request_template.md
.github/workflows/: automatic_tag_release.yml  docs.yml  run_pytest.yml
docs/: README.md  TODO.md  change_notes.txt  conf.py  configuration.md  dev_instructions.md  developer_guide.md  index.rst  quick_start.md  runconf_ui_config.md
docs/modules/api_reference/: api_reference.rst  backend.rst  cli.rst  repo_manager.rst  state_tree.rst  system_configuration.rst  textual.rst  utils.rst
docs/modules/general/: developer_guide.rst  installation_guide.rst  quick_start.rst  system_configuration.rst
scripts/: runconf_np02_emu_env_setup.sh  runconf_np02_env_setup.sh  runconf_np04_emu_env_setup.sh  runconf_np04_env_setup.sh  setup_np02_environment.sh  setup_np04_environment.sh
src/cider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cider/apps/: __main__apple__.py  __main__cider__.py  __main__shifter_view__.py  shifter_view.tcss  shifter_view_old.tcss
src/cider/configuration/: np02_configuration.yml
src/cider/screens/: daq_screen.py  disable_object_screen.py  help_screen.py  quit_screen.py  select_config_screen.py  selection_tree_screen.py  shifter_view_screen.py  toggle_screen.tcss
src/cider/utils/: config_path_reader.py  configuration_utils.py  consolidate_file.py  daq_conf_tree.py  detector_subsystem.py  file_cleaner.py  file_system_watcher.py  generate_enable_disable_map.py  management_interface.py  selection_manager.py  shifter_config_reader.py
src/cider/widgets/: daq_tree_widget.py  daq_widget.py  detector_subsystem_panel.py  enable_disable_base.py  file_io_panel.py  file_select_panel.py  multicomponent_panel.py  on_off_grid_widget.py  on_off_widget_refactor.py  options_panel.py  popup_message.py  single_component_panel.py  trigger_panel.py
src/runconf_ui/: __init__.py  exceptions.py
src/runconf_ui/app_state/: app_state.py
src/runconf_ui/apps/: __main__oks_dump__.py  __main__shifter_view__.py  runconf_ui_main.py  shifter_view.tcss
src/runconf_ui/backend/: __init__.py  runconf_ui.py  runconf_ui_backend.py
src/runconf_ui/backend_interface/: __init__.py  runconf_backend.py
src/runconf_ui/config_files/: ehn1_configuration.yml
src/runconf_ui/configuration/: np02_configuration.yml  np04_configuration.yml  path_configuration.py
src/runconf_ui/configuration_manager_interfaces/: local_daq_conf_manager.py  management_interface.py  remote_daq_conf_manger.py
src/runconf_ui/data_structures/: tree_interface.py
src/runconf_ui/interface_layer/: __init__.py  node_index.py  runconf_ui.py
src/runconf_ui/repo_manager/: __init__.py  repo_manager_factory.py  repo_manager_interface.py
src/runconf_ui/runconf_backend_wrapper/: __init__.py  runconf_backend_wrapper.py
src/runconf_ui/runconf_ui_configuration/: shifter_config_reader.py
src/runconf_ui/runconf_ui_controllers/: runconf_ui_state.py
src/runconf_ui/screens/: help_screen.py  popup_manager.py  quit_screen.py  shifter_view_screen.py
src/runconf_ui/state_operations/: __init__.py  state_operation.py  state_operation_container.py
src/runconf_ui/state_tree/: __init__.py  nodes.py  traversal.py
src/runconf_ui/system_configuration/: __init__.py  builders.py  config_assembler.py  config_dataclasses.py  config_reader.py  dataclasses.py  system_builders.py  system_config.py
src/runconf_ui/system_visibility/: __init__.py  subsystem_registry.py  system_builders.py  visibility_config.py
src/runconf_ui/system_visiblity/: __init__.py  builders.py  object_visibility_configuration.py  subsystem_registry.py
src/runconf_ui/textual/: __init__.py  runconf_shifter_ui.tcss  runconf_ui_app.py  utils.py
src/runconf_ui/utils/: __init__.py  config_path_reader.py  config_utils.py  daq_conf_tree.py  file_cleaner.py  generate_enable_disable_map.py  logging.py  management_interface.py  rich_utils.py  save_file_handler.py  shifter_config_reader.py  subsystem_status.py
src/runconf_ui/widgets/: adjustable_attribute_panel.py  enable_disable_base.py  file_select_panel.py  multicomponent_panel.py  options_panel.py  popup_message.py  (+1 more)
tests/: conftest.py  test_adapters.py  test_backend  test_integration.py  test_nodes.py  test_repo_manager.py  test_runconfui_backend.py  test_state_operations.py  test_system_config.py  test_system_factories.py  test_textual.py  test_textual_regression.py  test_traversal.py  test_utils.py  test_visibility_config.py  test_wrapper.py
tests/test_files/: dummy.yml
(+148 files in other folders)
