[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "runconf_ui"
description = "A text user interface (TUI) designed to be used to enable/disable elements of the detector"
version = "5.2.7"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
	     "click",
	     "textual",
	     "textual_dev",
	     "rich",
	     ]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.scripts]
runconf-shifter-ui = "runconf_ui.apps.__main__shifter_view__:main"
py_oks_dump = "runconf_ui.apps.__main__oks_dump__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]
develop = [
    "ipdb",
    "ipython",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short --cov=integrationtest --cov=src/integrationtest tests/"  # omitted --cov-report=html to avoid suppressing table to stdout

[tool.coverage.run]
source = ["runconf_ui"]
omit = ["tests/*", "scripts/*"]

# * See https://docs.astral.sh/ruff/rules/ for details on Ruff's linting options
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # check for errors using PyFlakes
    "I",    # best practices for import calls
    "UP",   # suggestions for code modernization
    "RUF",  # build in Ruff warnings
    "R",    # refactoring suggestions
]
ignore = [
    "E501", # Don't enforce line lengths within a linting context
]
