[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "runconf_ui"
description = "A text user interface (TUI) designed to be used to enable/disable elements of the detector"
version = "6.0.0"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
	     "click",
	     "textual",
	     "textual_dev",
	     "rich",
	     ]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
script-files = ["scripts/runconf_np02_env_setup.sh",
                "scripts/runconf_np04_env_setup.sh"]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.scripts]
runconf-shifter-ui = "runconf_ui.apps.runconf_ui_main:cli"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit",
    "mypy",
]

docs = [
    "sphinx",
    "sphinx-click==4.4.0", # OLD VERSION NEEDED!!!
    "sphinx-autodoc-typehints>=2.3.0",
    "furo"
]

[tool.pytest.ini_options]
addopts = "-v --tb=short --cov=runconf_ui --cov=src/runconf_ui tests/"  # omitted --cov-report=html to avoid suppressing table to stdout
markers = [
    "slow: mark a test that takes a long time to run.",
]

[tool.coverage.run]
source = ["runconf_ui"]
omit = ["tests/*", "scripts/*"]

# * See https://docs.astral.sh/ruff/rules/ for details on Ruff's linting options
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # check for errors using PyFlakes
    "I",    # best practices for import calls
    "UP",   # suggestions for code modernization
    "RUF",  # build in Ruff warnings
    "R",    # refactoring suggestions
]
ignore = [
    "E501", # Don't enforce line lengths within a linting context
]