[metadata]
name = drunc
version = attr: runconf_ui.__version__
# url = 
# long_description = file: docs/README.md
# long_description_content_type = text/markdown

[options]
packages = find_namespace:
package_dir = =src
include_package_data = true
python_requires = >= 3.10
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src
include_package_data = true

[options.package_data]
drunc.data = *
drunc.data.process_manager = *

[options.entry_points]
console_scripts =
    shifter-view = runconf_ui.apps.__main__shifter_view__:main